cluster/apps/snapraid/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapraid
  namespace: snapraid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snapraid
  template:
    metadata:
      labels:
        app: snapraid
    spec:
      containers:
        - name: snapraid
          image: ghcr.io/gi8lino/go-snapraid-web:v0.0.7
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: output
              mountPath: /output
              readOnly: true
      volumes:
        - name: output
          hostPath:
            path: /var/log/go-snapraid
            type: Directory
