cluster/apps/snapraid/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snapraid
  namespace: snapraid
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
  selector:
    app: snapraid
