cluster/apps/snapraid/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: snapraid
  namespace: snapraid
  annotations:
    cloudflare-operator.io/ignore: "true"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - snapraid.local.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: snapraid
          port: 8080
