cluster/apps/snapraid/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ${BASE_DOMAIN/./-}-sso
  namespace: snapraid
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: snapraid
  oidc:
    provider:
      issuer: https://sso.${BASE_DOMAIN}/realms/master
    clientID: envoy-gateway
    clientSecret:
      name: ${BASE_DOMAIN/./-}-sso-client-secret
